--- a/donate.html
+++ b/donate.html
@@ -127,11 +127,12 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 MillionErg - Crowdfunding basato su Ergo</p>
+    <div class="container">
+         <p>© 2024 MillionErg - Crowdfunding basato su Ergo</p>
         <a href="https://ergoplatform.org" target="_blank" style="color:white;">Learn more about Ergo</a>
-    </footer>
-
-    <!-- Inclusione del SDK di Ergo -->
+    </div>
+</footer>
+        <!-- Inclusione del SDK di Ergo -->
     <script src="https://cdn.jsdelivr.net/npm/ergo-lib-wasm-browser/ergo_lib_wasm.js"></script>
 
     <!-- Custom Script -->
