--- a/donate.html
+++ b/donate.html
@@ -16,6 +16,9 @@
             background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Rende il footer sempre in fondo alla pagina */
         }
         header {
             background-color: #333;
@@ -26,6 +29,7 @@
             max-width: 1200px;
             margin: auto;
             padding: 0 15px;
+            flex: 1; /* Permette al contenuto di espandersi */
         }
         .logo-container img {
             width: 100px;
@@ -127,12 +131,13 @@
 
     <!-- Footer Section -->
     <footer>
-    <div class="container">
-         <p>© 2024 MillionErg - Crowdfunding basato su Ergo</p>
-        <a href="https://ergoplatform.org" target="_blank" style="color:white;">Learn more about Ergo</a>
-    </div>
-</footer>
-        <!-- Inclusione del SDK di Ergo -->
+        <div class="container">
+            <p>© 2024 MillionErg - Crowdfunding basato su Ergo</p>
+            <a href="https://ergoplatform.org" target="_blank" style="color:white;">Learn more about Ergo</a>
+        </div>
+    </footer>
+
+    <!-- Inclusione del SDK di Ergo -->
     <script src="https://cdn.jsdelivr.net/npm/ergo-lib-wasm-browser/ergo_lib_wasm.js"></script>
 
     <!-- Custom Script -->
