--- a/collaborate.html
+++ b/collaborate.html
@@ -5,11 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collabora con Noi - ERGO41</title>
     <link rel="stylesheet" href="styles.css"> <!-- Collega il CSS principale -->
+
+    <!-- Link Bootstrap CSS for responsive design -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Rende il footer sempre in fondo alla pagina */
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 0 15px;
+            flex: 1; /* Permette al contenuto di espandersi */
+        }
+        .logo-container img {
+            width: 100px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <!-- Header Section -->
     <header>
-        <div class="container">
+        <div class="container d-flex justify-content-between align-items-center">
             <div class="logo-container">
                 <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
                     <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
@@ -23,7 +78,6 @@
                     <li><a href="benefits.html">Vantaggi</a></li>
                     <li><a href="donate.html">Dona</a></li>
                     <li><a href="contact.html">Contatti</a></li>
-                    
                 </ul>
             </nav>
         </div>
@@ -57,8 +111,10 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 MillionErg</p>
-        <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
+        <div class="container">
+            <p>&copy; 2024 MillionErg. Tutti i Diritti Riservati.</p>
+            <a href="https://ergoplatform.org/" target="_blank">Learn more about Ergo</a>
+        </div>
     </footer>
 </body>
 </html>
