--- a/benefits.html
+++ b/benefits.html
@@ -100,19 +100,19 @@
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <h3>Governance Decentralizzata</h3>
-                    <p>Le decisioni sono prese dai membri della comunità, assicurando che tutte le voci siano ascoltate e che ogni voto abbia importanza.</p>
+                    <p>Le decisioni all'interno della nostra comunità non sono affidate a un ristretto gruppo di individui, ma sono prese dai membri stessi. Questo modello di governance decentralizzata garantisce che ogni voce venga ascoltata e che ogni voto abbia un impatto reale. In questo modo, promuoviamo un senso di appartenenza e responsabilità condivisa, permettendo a tutti di contribuire attivamente al nostro progetto e alla sua evoluzione.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Privacy e Sicurezza</h3>
-                    <p>Utilizziamo crittografia avanzata per proteggere i dati dei nostri utenti e garantire la privacy in tutte le transazioni.</p>
+                    <p>Utilizziamo le più avanzate tecnologie di crittografia per proteggere i dati dei nostri utenti e garantire che la loro privacy sia sempre al sicuro. Ogni transazione effettuata sulla nostra piattaforma è protetta da sistemi di sicurezza robusti che impediscono accessi non autorizzati e garantiscono l'integrità delle informazioni. Questo ci consente di costruire fiducia e sicurezza tra gli utenti, fondamentali per il successo di qualsiasi iniziativa decentralizzata.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Accessibilità Globale</h3>
-                    <p>Chiunque, ovunque, può partecipare e beneficiare della nostra piattaforma, promuovendo una comunità veramente globale.</p>
+                    <p>La nostra piattaforma è progettata per essere accessibile a chiunque, ovunque nel mondo. Non importa quale sia la tua provenienza o il tuo background; ogni persona ha l'opportunità di partecipare e beneficiare dei servizi offerti. Questa inclusività promuove una comunità veramente globale, in cui le diverse culture e idee possono prosperare e contribuire alla crescita collettiva.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Costi Ridotti</h3>
-                    <p>La nostra struttura riduce significativamente i costi delle transazioni, permettendo agli utenti di risparmiare denaro.</p>
+                    <p>Grazie alla nostra innovativa struttura operativa, siamo in grado di ridurre significativamente i costi delle transazioni. Questo non solo permette agli utenti di risparmiare denaro, ma consente anche a più persone di accedere ai nostri servizi senza dover affrontare oneri finanziari eccessivi. Crediamo che l'equità economica sia essenziale per un'adozione diffusa delle tecnologie decentralizzate, e ci impegniamo a rendere i nostri servizi il più economici possibile.</p>
                 </div>
             </div>
         </div>
