--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
         }
         .btn {
-            background-color: #007bff;
+            background-color: #0056b3;
             color: white;
             padding: 10px 20px;
             border: none;
