--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             text-decoration: underline;
         }
         #hero {
-            background-color: #007bff;
+            background-color: #3399ff;
             color: white;
             padding: 50px 0;
             text-align: center;
