--- a/about.html
+++ b/about.html
@@ -19,39 +19,49 @@
             flex-direction: column;
             min-height: 100vh; /* Rende il footer sempre in fondo alla pagina */
         }
+
         header {
             background-color: #333;
             color: white;
             padding: 10px 0;
         }
+
         .container {
             max-width: 1200px;
             margin: auto;
             padding: 0 15px;
             flex: 1; /* Permette al contenuto di espandersi */
         }
+
         .logo-container img {
             width: 100px;
         }
+
         h1, h2, h3 {
             color: #333;
         }
+
         nav ul {
             list-style-type: none;
             padding: 0;
+            display: flex; /* Flexbox per un layout più pulito */
+            margin-bottom: 0; /* Rimuove il margine inferiore di nav ul */
         }
+
         nav ul li {
-            display: inline-block;
             margin-right: 20px;
         }
+
         nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
         }
+
         nav ul li a:hover {
             text-decoration: underline;
         }
+
         footer {
             margin-top: 50px;
             padding: 20px;
@@ -69,7 +79,7 @@
                     <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
                 </a>
             </div>
-            <h1>ERGO41</h1>
+            <h1 class="h1">ERGO41</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
